--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,8 @@
         "react-router-dom": "^6.14.1",
         "react-scripts": "5.0.1",
         "recoil": "^0.7.7",
+        "slick": "^1.12.2",
+        "slick-carousel": "^1.8.1",
         "styled-components": "^6.0.2",
         "styled-reset": "^4.5.1",
         "uuid": "^9.0.0",
