--- a/package.json
+++ b/package.json
@@ -1,20 +1,29 @@
 {
-    "name": "nodetoreact",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "server": "cd server && nodemon server",
-        "client": "cd client && npm start",
-        "start": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\""
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "body-parser": "^1.20.2",
-        "concurrently": "^8.2.0",
-        "express": "^4.18.2",
-        "nodemon": "^2.0.22"
-    }
+  "name": "nodetoreact",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "server": "cd server && nodemon server",
+    "client": "cd client && npm start",
+    "start": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\""
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.20.2",
+    "caver-js-ext-kas": "^1.12.0",
+    "concurrently": "^8.2.0",
+    "coolsms-node-sdk": "^2.0.1",
+    "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "moment": "^2.29.4",
+    "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.4.4",
+    "nodemon": "^2.0.22",
+    "qrcode": "^1.5.3"
+  }
 }
