--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "caver-js-ext-kas": "^1.12.0",
     "concurrently": "^8.2.0",
     "coolsms-node-sdk": "^2.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
