--- a/server/.env
+++ b/server/.env
@@ -2,10 +2,10 @@
 # user, password, database 설정 필요
 
 # my sql server 정보
-host = 'localhost'
+host = '127.0.0.1'
 port = 3306
 user = 'root'
-password = 'a95103'
+password = 'hill4625'
 database = 'new_deal2'
 
 
