--- a/package.json
+++ b/package.json
@@ -13,8 +13,16 @@
     "license": "ISC",
     "dependencies": {
         "body-parser": "^1.20.2",
+        "caver-js-ext-kas": "^1.12.0",
         "concurrently": "^8.2.0",
+        "dotenv": "^16.3.1",
+        "ejs": "^3.1.9",
         "express": "^4.18.2",
-        "nodemon": "^2.0.22"
+        "express-session": "^1.17.3",
+        "moment": "^2.29.4",
+        "multer": "^1.4.5-lts.1",
+        "mysql2": "^3.4.4",
+        "nodemon": "^2.0.22",
+        "qrcode": "^1.5.3"
     }
 }
