--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
         "react-query": "^3.39.3",
         "react-router-dom": "^6.14.1",
         "react-scripts": "5.0.1",
+        "react-slick": "^0.29.0",
         "recoil": "^0.7.7",
         "slick": "^1.12.2",
         "slick-carousel": "^1.8.1",
