--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "caver-js": "^1.10.2",
     "caver-js-ext-kas": "^1.12.0",
     "concurrently": "^8.2.0",
     "coolsms-node-sdk": "^2.0.1",
@@ -27,6 +28,7 @@
     "nodemon": "^2.0.22",
     "qrcode": "^1.5.3",
     "truffle": "^5.10.2",
-    "truffle-hdwallet-provider-klaytn": "^1.4.2"
+    "truffle-hdwallet-provider-klaytn": "^1.4.2",
+    "web3": "^4.0.2"
   }
 }
